--- a/.env.example
+++ b/.env.example
@@ -6,19 +6,20 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=devmarketer
+DB_DATABASE=echo
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
+REDIS_DRIVER=predis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -29,6 +30,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=602506
+PUSHER_APP_KEY=534663dca3f802a2a120
+PUSHER_APP_SECRET=cf7fae9b6b0ee8af3dd8
+PUSHER_APP_CLUSTER=eu
